--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
+    "@types/node": "^12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^4.3.5",
     "body-parser": "^1.19.0",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.6.3"
   },
