--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/express": "^4.17.1",
+    "@types/history": "^4.7.3",
     "@types/jest": "24.0.18",
     "@types/node": "^12.7.5",
     "@types/react": "16.9.2",
@@ -15,6 +16,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "3.1.1",
     "react-spring": "^8.0.27",
     "styled-components": "^4.3.2",
