--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "noImplicitAny": false
   },
   "include": [
-    "src", "react-app-env.d.ts", "serviceWorker.ts"
+    "src", "react-app-env.d.ts", "serviceWorker.ts", "src/components/about/About.desc/.tsx"
   ]
 }
