--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactts",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://alfinsuryas.gitlab.io/immersive-g",
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/history": "^4.7.3",
