--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,6 @@ pages:
     - mv build public # Move build files to public dir for Gitlab Pages
   artifacts:
     paths:
-    - public # The built files for Gitlab Pages to serve
+    - public/ # The built files for Gitlab Pages to serve
   only:
     - master # Only run on master branch
