--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,10 @@
-# Using the node alpine image to build the React app
 image: alpine:latest
-
-# Name the stages involved in the pipeline
-stages:
-- deploy
-
-# Job name for gitlab to recognise this results in assets for Gitlab Pages
-# https://docs.gitlab.com/ee/user/project/pages/introduction.html#gitlab-pages-requirements
 pages:
   stage: deploy
   script:
-    - npm install # Install all dependencies
-    - npm run build --prod # Build for prod
-    - cp public/index.html public/404.html # Not necessary, but helps with https://medium.com/@pshrmn/demystifying-single-page-applications-3068d0555d46
-    - mv public _public # CRA and gitlab pages both use the public folder. Only do this in a build pipeline.
-    - mv build public # Move build files to public dir for Gitlab Pages
+  - echo 'Nothing to do...'
   artifacts:
     paths:
-    - build/ # The built files for Gitlab Pages to serve
+    - build/
   only:
-    - master # Only run on master branch
+  - master
