--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^4.3.2",
     "typescript": "3.6.3"
   },
+  "homepage": "https://alfinsuryas.gitlab.io/immersive-g",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
