--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "styled-components": "^4.3.2",
     "typescript": "3.6.3"
   },
-  "homepage": "https://alfinsuryas.gitlab.io/immersive-g",
+  "homepage": "https://missynorif.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
